--- a/css/styles.css
+++ b/css/styles.css
@@ -53,20 +53,67 @@ li {
   padding-right: 15px;
 }
 
+.order {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(../images/background_section_1.webp);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #2e2f42;
+  /* z-index: -1; */
+}
+.about {
+  background-image: url(../images/background_section_2.webp);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #fff;
+  /* padding-top: 100px;
+  padding-bottom: 100px; */
+}
+
+.about-title {
+  text-align: center;
+  font-size: 28px;
+  background: -webkit-linear-gradient(#f9e994, #537d13, #483c08);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.results {
+  background-image: linear-gradient(
+      rgba(225, 237, 248, 1),
+      rgba(127, 179, 225, 0),
+      rgba(0, 0, 0, 0.25)
+    ),
+    url(../images/lawn.webp);
+  background-repeat: no-repeat;
+  background-position: 50% 100%;
+}
+
+.results-title {
+  text-align: center;
+  font-size: 28px;
+  color: #537d13;
+  margin-bottom: 30px;
+}
+
+.results-text {
+  font-size: 14px;
+  color: #483c08;
+  line-height: calc(23 / 18);
+  padding: 0 15px;
+}
+.results-text:not(:last-child) {
+  margin-bottom: 15px;
+}
+
 @media screen and (min-width: 320px) {
   .container {
-    width: 100%;
+    /* width: 100%; */
     margin-left: auto;
     margin-right: auto;
-  }
-  .order {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url(../images/background_section_1.webp);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #2e2f42;
-    z-index: -1;
   }
 }
 @media screen and (max-width: 1139px) {
@@ -74,6 +121,7 @@ li {
     position: absolute;
   } */
   .header-container {
+    width: 100%;
     position: absolute;
     display: flex;
     justify-content: space-evenly;
@@ -284,6 +332,75 @@ li {
     color: #444444;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
+
+  .about {
+    background-image: url(../images/background_section_2.webp);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #fff;
+    padding-top: 60px;
+    padding-bottom: 30px;
+  }
+
+  .list_block2 {
+    display: flex;
+    /* flex-direction: row; */
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 62px;
+    padding-left: 0;
+    gap: 30px;
+  }
+
+  .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 290px;
+    height: 415px;
+    background-color: #f6e791;
+    border-radius: 20px;
+    padding: 24px 15px 15px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .info:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .info-card {
+    height: 218px;
+    border-radius: 20px;
+    background-color: rgba(161, 211, 55, 0.3);
+    text-align: center;
+    padding: 21px 15px 0 15px;
+  }
+  .card-title {
+    margin-bottom: 19px;
+    color: #fff;
+    text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.25);
+  }
+  .card-text {
+    font-size: 14px;
+    color: rgba(72, 60, 8, 1);
+  }
+
+  .results {
+    padding-top: 60px;
+    padding-bottom: 30px;
+  }
+
+  .block-frame {
+    display: none;
+  }
+
+  .results-cat {
+    display: none;
+  }
+  .wrapper-results-text {
+    margin-bottom: 105px;
+  }
 }
 @media screen and (min-width: 768px) {
   .container {
@@ -358,6 +475,30 @@ li {
     color: #dfe4de;
   }
 
+  .info:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .about {
+    padding-bottom: 60px;
+  }
+  .about-title {
+    font-size: 36px;
+  }
+  .results {
+    padding-bottom: 60px;
+  }
+  .results-title {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
+  .results-text {
+    font-size: 18px;
+    padding: 0 80px;
+  }
+  .results-text:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
   /* .block-cats {
     display: inline;
     z-index: 3;
@@ -367,10 +508,8 @@ li {
 }
 
 @media screen and (min-width: 1140px) {
-  .container {
-    padding-left: 280px;
-    padding-right: 280px;
-  }
+  /* .container {
+  } */
   .header {
     position: absolute;
     left: 50%;
@@ -417,15 +556,8 @@ li {
   }
 
   .order {
-    /* background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url(../images/background_section_1.webp);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #2e2f42;
-    z-index: -1; */
     padding-top: 156px;
-    padding-bottom: 46px;
+    padding-bottom: 100px;
   }
   .order_title {
     text-align: center;
@@ -593,6 +725,103 @@ li {
     font-size: 18px;
     color: #444444;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  .about {
+    /* background-image: url(../images/background_section_2.webp);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #fff; */
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  .about-title {
+    text-align: center;
+    font-size: 52px;
+    background: -webkit-linear-gradient(#f9e994, #537d13, #483c08);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .list_block2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 62px;
+  }
+  .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 305px;
+    /* height: 439px; */
+    background-color: #f6e791;
+    border-radius: 20px;
+    padding: 24px 15px 15px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .info:not(:last-child) {
+    margin-right: 85px;
+  }
+  .info-card {
+    height: 218px;
+    border-radius: 20px;
+    background-color: rgba(161, 211, 55, 0.3);
+    text-align: center;
+    padding: 21px 15px 0 15px;
+  }
+  .card-title {
+    margin-bottom: 19px;
+    color: #fff;
+    text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.25);
+  }
+  .card-text {
+    color: rgba(72, 60, 8, 1);
+  }
+
+  .results {
+    padding-top: 99px;
+    padding-bottom: 197px;
+  }
+  /* .results-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  } */
+  .results-title {
+    font-size: 52px;
+    margin-bottom: 70px;
+  }
+  .wrapper-block-results {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .wrapper-frame-text {
+    position: relative;
+  }
+  .block-frame {
+    position: absolute;
+    left: 35px;
+  }
+  .wrapper-results-text {
+    width: 760px;
+    margin-left: 35px;
+    margin-right: 30px;
+    padding: 40px 90px 0px 40px;
+  }
+  .results-text {
+    font-size: 18px;
+    color: #483c08;
+    line-height: calc(23 / 18);
+    padding: 0;
+  }
+  .results-text:not(:last-child) {
+    margin-bottom: 27px;
   }
 }
 
